--- a/index.html
+++ b/index.html
@@ -15,6 +15,158 @@
       href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="./images/logo.svg" alt="Logo" class="logo" />
+      <h1 class="main-heading">A history of everything you copy</h1>
+      <p class="header-info">
+        Clipboard allows you to track and organize everything you copy.
+        Instantly access your clipboard on all your devices.
+      </p>
+      <button class="btn btn-download btn-for-ios">Download for iOS</button>
+      <button class="btn btn-download btn-for-mac">Download for Mac</button>
+    </header>
+    <main>
+      <section class="section-features">
+        <h2 class="section-heading features-heading">
+          Keep track of your snippets
+        </h2>
+        <p class="features-info">
+          Clipboard instantly stores any item you copy in the cloud, meaning you
+          can access your snippets immediately on all your devices. Our Mac and
+          iOS apps will help you organize everything.
+        </p>
+        <img
+          src="./images/image-computer.png"
+          alt="Desktop Computer"
+          class="features-img"
+        />
+        <div class="features">
+          <div class="feature">
+            <h3 class="feature-title item-title">Quick Search</h3>
+            <p class="feature-info">
+              Easily search your snippets by content, category, web address,
+              application, and more.
+            </p>
+          </div>
+          <div class="feature">
+            <h3 class="feature-title item-title">iCloud Sync</h3>
+            <p class="feature-info">
+              Instantly saves and syncs snippets across all your devices.
+            </p>
+          </div>
+          <div class="feature">
+            <h3 class="feature-title item-title">Complete History</h3>
+            <p class="feature-info">
+              Retrieve any snippets from the first moment you started using the
+              app.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="access-anywhere">
+        <h2 class="section-heading access-anywhere-heading">
+          Access Clipboard Anywhere
+        </h2>
+        <p class="access-anywhere-info">
+          Whether you’re on the go, or at your computer, you can access all your
+          Clipboard snippets in a few simple clicks.
+        </p>
+        <img
+          src="./images/image-devices.png"
+          alt="Phone & Tablet"
+          class="access-anywhere-img"
+        />
+      </section>
+
+      <section class="section-characteristics">
+        <h2 class="section-heading characteristics-heading">
+          Supercharge your workflow
+        </h2>
+        <p class="characteristics-info">
+          We’ve got the tools to boost your productivity.
+        </p>
+        <div class="characteristics">
+          <div class="characteristic">
+            <i class="far fa-file-alt characteristic-icon"></i>
+            <h3 class="characteristic-title item-title">Create blacklists</h3>
+            <p class="characteristics-info">
+              Ensure sensitive information never makes its way to your clipboard
+              by excluding certain sources.
+            </p>
+          </div>
+          <div class="characteristic">
+            <i class="fas fa-text-height characteristic-icon"></i>
+            <h3 class="characteristic-title item-title">Plain text snippets</h3>
+            <p class="characteristic-info">
+              Remove unwanted formatting from copied text for a consistent look.
+            </p>
+          </div>
+          <div class="characteristic">
+            <i class="far fa-eye characteristic-icon"></i>
+            <h3 class="characteristic-title item-title">Sneak preview</h3>
+            <p class="characteristic-info">
+              Quick preview of all snippets on your Clipboard for easy access.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <div class="power-users">
+        <img
+          src="./images/logo-google.png"
+          alt="Google Logo"
+          class="power-user"
+        />
+        <img src="./images/logo-ibm.png" alt="IBM Logo" class="power-user" />
+        <img
+          src="./images/logo-microsoft.png"
+          alt="Microsoft Logo"
+          class="power-user"
+        />
+        <img src="./images/logo-hp.png" alt="HP Logo" class="power-user" />
+        <img
+          src="./images/logo-vector-graphics.png"
+          alt="Vector Graphics Logo"
+          class="power-user"
+        />
+      </div>
+
+      <section class="section-download">
+        <h2 class="section-heading download-heading">
+          Clipboard for iOS and macOS
+        </h2>
+        <p class="download-info">
+          Available for free on the App Store. Download for Mac or iOS, sync
+          with iCloud and you’re ready to start adding to your clipboard.
+        </p>
+        <button class="btn btn-download btn-for-ios">Download for iOS</button>
+        <button class="btn btn-download btn-for-mac">Download for Mac</button>
+      </section>
+    </main>
+    <footer>
+      <img src="./images/logo.svg" alt="Logo" class="footer-logo" />
+      <nav class="footer-nav">
+        <ul class="nav-links">
+          <li class="nav-link"><a href="#">faqs</a></li>
+          <li class="nav-link"><a href="#">contact us</a></li>
+          <li class="nav-link"><a href="#">privacy policy</a></li>
+          <li class="nav-link"><a href="#">press kit</a></li>
+          <li class="nav-link"><a href="#">install guide</a></li>
+        </ul>
+      </nav>
+      <div class="social-media">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
+    </footer>
+  </body>
 </html>
