Add the rest of mobile styles

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="characteristic">
             <i class="far fa-file-alt characteristic-icon"></i>
             <h3 class="characteristic-title item-title">Create blacklists</h3>
-            <p class="characteristics-info">
+            <p class="characteristic-info">
               Ensure sensitive information never makes its way to your clipboard
               by excluding certain sources.
             </p>
@@ -155,7 +155,9 @@
       <img src="./images/logo.svg" alt="Logo" class="footer-logo" />
       <nav class="footer-nav">
         <ul class="nav-links">
-          <li class="nav-link"><a href="#">faqs</a></li>
+          <li class="nav-link">
+            <a href="#">faq<span class="small-s">s</span></a>
+          </li>
           <li class="nav-link"><a href="#">contact us</a></li>
           <li class="nav-link"><a href="#">privacy policy</a></li>
           <li class="nav-link"><a href="#">press kit</a></li>
@@ -163,9 +165,9 @@
         </ul>
       </nav>
       <div class="social-media">
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square social-media-icon"></i>
+        <i class="fab fa-twitter social-media-icon"></i>
+        <i class="fab fa-instagram social-media-icon"></i>
       </div>
     </footer>
   </body>
