--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
     </header>
     <main>
       <section class="section-features">
-        <h2 class="section-heading features-heading">
-          Keep track of your snippets
-        </h2>
-        <p class="features-info">
-          Clipboard instantly stores any item you copy in the cloud, meaning you
-          can access your snippets immediately on all your devices. Our Mac and
-          iOS apps will help you organize everything.
-        </p>
+        <div class="features-header">
+          <h2 class="section-heading features-heading">
+            Keep track of your snippets
+          </h2>
+          <p class="features-info">
+            Clipboard instantly stores any item you copy in the cloud, meaning
+            you can access your snippets immediately on all your devices. Our
+            Mac and iOS apps will help you organize everything.
+          </p>
+        </div>
         <img
           src="./images/image-computer.png"
           alt="Desktop Computer"
